--- a/DDShortener/DDShortener.csproj
+++ b/DDShortener/DDShortener.csproj
@@ -308,6 +308,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\UrlNotFound.cshtml" />
+    <Content Include="Views\Home\_UrlList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
